# chatteree-server

./: .flake8  .pre-commit-config.yaml  chatteree.dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: __init__.py  config.py  database.py  main.py  worker.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  chatroom.py  messages.py  users.py
app/api/routes/: users.py
app/controllers/: chatroom_controller.py  main.py  message_controller.py  user_controller.py
app/core/: celery_app.py  config.py
app/db/: __init__.py  base.py  session.py
app/definitions/: app_exceptions.py  service_result.py
app/definitions/services/: __init__.py  email_service_interface.py
app/models/: __init__.py  chatroom_model.py  enums.py  message_model.py  user_model.py
app/repositories/: chatroom_repository.py  main.py  user_repository.py
app/routes/: users.py
app/schemas/: __init__.py  chatroom_schema.py  jwt_schema.py  message_schema.py  user_schema.py
app/security/: token.py
app/services/: email_service.py
migrations/: env.py
migrations/versions/: 1a427112f21a_update_users_table.py  27d51c99eadc_create_chatroom_table.py  373bf3b643fd_create_messages_users_and_chatrooms_.py  616da90da43b_create_messages_table.py  8a42f011bbd2_create_messages_table.py  9eaf100b2834_create_users_table.py  abb96757c3c7_create_users_table.py  c0ac09727d49_update_chatrooms_table.py  cc5cc15ea2e5_create_messages_chatroom_user_tables.py
