[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joseph Maclean Arhin <josephmacleanarhin@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
python-dotenv = "^0.15.0"
sqlalchemy = "^1.3.22"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
sendgrid = "^6.5.0"
alembic = "^1.4.3"
loguru = "^0.5.3"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | *.ini

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
